# lasada

./: Cargo.toml  DEVELOPMENT_HISTORY.md  HOW_TO_USE.md  ORIGIN.md  PREREQUISITES.md  PROJECT_DEFINITION.md  README.md  config.toml  install.sh
docs/en/: HOW_TO_USE.md  PREREQUISITES.md  PROJECT_DEFINITION.md  README.md
specs/: system_philosophy.vlog
src/: executor.py  interpreter.py  llm.py  main.py  main.rs
src/core/: interpreter.rs  mod.rs  traits.rs  vector_db.rs
src/plugins/: bash_executor.rs  computer_executor.rs  execution_dispatcher.rs  mock_llm.rs  mod.rs  openai_compatible_llm.rs  python_executor.rs  web_executor.rs
