[package]
name = "lasada"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
colored = "3.1.1"
config = "0.15.22"
dotenv = "0.15.0"
fern = "0.7.1"
futures-util = "0.3.32"
indicatif = "0.18.4"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
clap = { version = "4.5.23", features = ["derive"] }
tiktoken-rs = "0.6.0"
termimad = "0.31.1"
crossterm = "0.28.1"
